# year-4

./: README.md
semester-1/metaprogramming/: README.md
semester-1/metaprogramming/exam/: ISS.txt  SA.txt  enrollment_cost_1900.0  main.py
semester-1/metaprogramming/lab-1/: .gitignore  editorconfig.json  editorconfig.py
semester-1/metaprogramming/lab-2/: python_ccf.py
semester-1/metaprogramming/lab-3/: .gitignore  demo.py  demo_classes.py  example.db  example.db-journal  py2sql.py  sample_class.py  util.py
semester-1/metaprogramming/module1/university_units/: __init__.py  demo.py  university_unit.py  university_unit_type.py
semester-1/metaprogramming/module2/: dep1.txt  dep2.txt  main.py
semester-2/computer-algebra/factorization/: main.py
semester-2/functional-programming/: .gitignore
semester-2/functional-programming/lab1/: lab1.cabal
semester-2/functional-programming/lab1/db/: init_tables.sql
semester-2/functional-programming/lab1/src/: Create.hs  CreateTest.hs  DeleteTest.hs  FindByIdTest.hs  Main.hs  UpdateTest.hs  Utils.hs
semester-2/functional-programming/lab2/: lab2.cabal
semester-2/functional-programming/lab2/app/: Main.hs
semester-2/functional-programming/lab2/src/: Integral.hs
semester-2/functional-programming/lab2/test/: Spec.hs
semester-2/mathematical-fundamentals-of-data-security/lab1/: alt.py  backward.txt  forward.txt  main.py
semester-2/mathematical-fundamentals-of-data-security/lab2/: big_primes.py
semester-2/mathematical-fundamentals-of-data-security/lab4/: .gitignore  shamir.py  write_xlsx.py
