name:              lab2
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.8

library
  exposed-modules:
      Integral
  other-modules:
      Paths_lab2
  hs-source-dirs:
      src
  build-depends:
      HUnit
    , base >=4.7 && <5
    , deepseq
    , parallel
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , time
  default-language: Haskell2010

executable lab2-exe
  main-is: Main.hs
  other-modules:
      Paths_lab2
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HUnit
    , base >=4.7 && <5
    , deepseq
    , lab2
    , parallel
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , time
  default-language: Haskell2010

test-suite lab2-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_lab2
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HUnit
    , base >=4.7 && <5
    , deepseq
    , lab2
    , parallel
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , time
  default-language: Haskell2010
